<resources>
    <string name="app_name">Jegyzokonyv</string>
    <string name="start">Start</string>
    <string name="exit">Exit</string>
    <string name="t">A</string>
    <string name="player">player</string>
    <string name="player_31">Jakab Olivér #31</string>
    <string name="v">D</string>
    <string name="settings">Settings</string>
    <string name="home_line_up">Home line-up</string>
    <string name="away_line_up">Away line-up</string>
    <string name="line_up">Line-up</string>
    <string name="sample_team">Sample team</string>
    <string name="save">Save</string>
    <string name="game_over">Game Over</string>
    <string name="result">result</string>
    <string name="textview">TextView</string>
    <string name="attack">Attack</string>
    <string name="defense">Defense</string>
    <string name="pause">Pause</string>
    <string name="continue2">Continue</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="settings_incompete">Please go to the settings and set the starter lineup for the game</string>
    <string name="scored">Score by %s #%d</string>
    <string name="_10_00">10:00</string>
</resources>
